# texturize

./: .gitignore  .gitmodules  README.rst  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-package.yml  python-release.yml
docs/: pypi.rst
examples/: Demo_Grass.ipynb  Demo_Gravel.ipynb  iterative.py
imagen/: __main__.py  optim.py  utils.py
imagen/algos/: patchmatch.py
imagen/commands/: reconstruct.py
imagen/data/: colorspace.py  histogram.py  images.py  patches.py  resize.py  scalespace.py
imagen/models/: __init__.py  classifiers.py  processor.py  translator.py  vgg.py
src/texturize/: __init__.py  __main__.py  api.py  app.py  commands.py  critics.py  encoders  io.py  logger.py  match.py  patch.py  solvers.py
tasks/: __init__.py  pycov.ini  pytest.ini  setup-cpu.yml  setup-cuda.yml
tests/: app_gram.py  app_hist.py  app_patch.py  conftest.py  prop_patchmatch.py  prop_utils.py  test_api.py  test_match.py
tests/algos/: prop_histogram.py  prop_patchmatch.py
tests/data/: prop_patches.py
